fixing the confirmation email system and user List b/F

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
   <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
-<p-toast></p-toast>
+<p-toast position="bottom-center"></p-toast>
+<p-confirmPopup></p-confirmPopup>
