--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -1,5 +1,9 @@
 <div class="header">
+  <div class="header-bg-img"></div>
   <div class="header-content">
+    <div class="header-content-blop">
+      Lorem ipsum dolor sit amet, consectetur
+    </div>
     <div class="header-content-first">
       <span>Discover Our Latest Products</span>
       <span>Explore Our Exciting Offers</span>
@@ -17,12 +21,6 @@
         label="Watch the Video"
         class="p-button-outlined"
       ></button>
-    </div>
-    <span>Join Our Community Today</span>
-    <div>
-      <i class="pi pi-android"></i>
-      <i class="pi pi-apple"></i>
-      <i class="pi pi-bitcoin"></i>
     </div>
   </div>
 </div>
