--- a/src/app/pages/blog-page/blog-page.component.css
+++ b/src/app/pages/blog-page/blog-page.component.css
@@ -1,6 +1,15 @@
 .mainpage{
     max-width: 1000px;
     margin: 20px auto;
+    position: relative;
+    padding: 10px;
+}
+.speedDial{
+    position: absolute;
+    right: 10px;
+}
+h2{
+    color: var(--maincolor);
 }
 .categ{
     background-color: var(--special-button-background);
