--- a/src/app/pages/blogs/blogs.component.html
+++ b/src/app/pages/blogs/blogs.component.html
@@ -99,7 +99,7 @@
           [first]="first"
           [rows]="rows"
           [totalRecords]="120"
-          [rowsPerPageOptions]="[10, 20, 30]"
+          [rowsPerPageOptions]="[2, 10, 20, 30]"
         ></p-paginator>
       </div>
     </div>
@@ -113,20 +113,19 @@
           <p-skeleton width="100%" height="40px" styleClass="mb-2"></p-skeleton>
         </div>
         <ng-template #topBlogs>
-          <div
-            class="recommended-topic"
-            *ngFor="let topFreeBlog of topFreeBlogs"
-          >
-            <a [routerLink]="['/BlogPage', topFreeBlog._id]">
-              <div class="topFreeBlog-title">
-                <i class="pi pi-bookmark-fill topFreeBlog-i"></i>
-                {{ topFreeBlog.title }}
-              </div>
-            </a>
-            <span class="topFreeBlog-shortDescription">
-              {{ topFreeBlog.shortDescription }}
-            </span>
-          </div>
+          <p-timeline [value]="topFreeBlogs" class="w-full md:w-20rem">
+            <ng-template pTemplate="content" let-topFreeBlog>
+              <a [routerLink]="['/BlogPage', topFreeBlog._id]">
+                <div class="topFreeBlog-title">
+                  {{ topFreeBlog.title }}
+                </div>
+              </a>
+              <span class="topFreeBlog-shortDescription">
+                {{ topFreeBlog.shortDescription }}
+              </span>
+            </ng-template>
+          </p-timeline>
+
           <p-button
             *ngIf="!showFourthBlog"
             (click)="loadFourthBlog()"
