--- a/src/app/pages/homepage/homepage.component.css
+++ b/src/app/pages/homepage/homepage.component.css
@@ -1,5 +1,5 @@
-
 .mainpage{
+  min-height: 1600px;
     max-width: 1300px;
     margin: auto;
 }
@@ -7,17 +7,33 @@
     color: #fff;
     padding: 30px;
     text-align: center;
+    position: relative;
+    overflow: hidden;
   }
   
+  .header-bg-img{
+    background-image: url(../../../assets/img/Untitled-4.png);
+    position: absolute;
+    height: 500px ;
+    width: 100%;
+    top: -100px;
+  }
+
   /* Center the content within the header */
   .header-content {
     max-width: 800px;
     display: flex;
     flex-direction: column;
     gap: 20px;
-    margin: 30px auto;
+    margin: 100px auto;
+    align-items: center;
   }
-  
+  .header-content-blop{
+    padding: 10px 20px;
+    border-radius: 20px;
+    width: max-content;
+    border :var(--special-button-border) solid 1px;
+  }
   /* Style the first set of spans in the content */
   .header-content-first span:first-child  {
     font-size: 55px;
@@ -44,9 +60,16 @@
     justify-content: center;
     gap: 20px;
 }
+.button-split button{
+  padding: 15px 20px !important;
+}
 .button-split button:last-child{
-    border: var(--whitecolor) solid 1px;
-    color: var(--whitecolor);
+    border: var(--graycolor) solid 1px;
+    color: var(--graycolor);
+}
+.button-split button:last-child:hover{
+  border: var(--whitecolor) solid 1px;
+  color: var(--whitecolor);
 }
   .header-content i {
     font-size: 24px;
