--- a/src/app/dashboard/add-blog/add-blog.component.css
+++ b/src/app/dashboard/add-blog/add-blog.component.css
@@ -3,15 +3,29 @@
     margin: auto;
     padding: 10px ;
   }
-  
   .form-sections {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     gap: 20px;
+    margin-top: 30px;
 }
-  
+  .form-all-section{
+    background-color: var(--soft-bgcolor);
+    width: 48%;
+    padding: 10px;
+    border-radius: 10px;
+  }
+ .form-fullcontent{
+  background-color: var(--soft-bgcolor);
+  border-radius: 10px;
+    padding: 10px;
+    max-width: 98%;
+ }
+ .form-fullcontent span{
+  margin-left: 10px;
+}
   .form-section {
-    max-width: 400px;
+    width: 100%;
   }
   
   h4 {
@@ -93,3 +107,7 @@
     margin-top: 10px;
   }
   
+  .submit-button{
+    margin-top: 20px;
+    margin-bottom: 40px;
+  }
